Add fullscreen button to footer

--- a/DWEC_U3_NotasApp_Apellido1-Apellido2/src/index.html
+++ b/DWEC_U3_NotasApp_Apellido1-Apellido2/src/index.html
@@ -41,6 +41,8 @@
 
   <footer>
     <button id="btnPanelDiario">Abrir Panel Diario</button>
+    <!--Boton para ampliar la pantalla-->
+    <button id="btnPantallaCompleta">Pantalla completa</button>
   </footer>
 
   <script src="app.js" defer></script>
